# pyinstaller_test2

./: .gitignore  HISTORY.rst  Makefile  README.rst  config.ini  setup.cfg  tox.ini
.build_exe/: build_exe.bat  build_exe_onefile.bat  copy_ntc_templates.py  list_files.py  ntc_templates_dir.txt  write_ntc_templates_dir_to_file.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  pyinstaller-windows.yml  pyinstaller-windows.yml.idle  release.yml  run_pytest.bat
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  pyinstaller_test2.rst  usage.rst
pyinstaller_test2/: __init__.py  cli.py  show_inventory.py  show_version.py
scripts/: print_release_suffix.sh
scripts/bash/: build_show_inventory.sh  build_show_version.sh
scripts/windows/: build_exe.bat  build_show_inventory.bat  get_ntc_templates_dir.py
tests/: __init__.py  test_one.py
