[bumpversion]
current_version = 0.13.7
commit = False
tag = False
allow_dirty = True

[metadata]
name = pyinstaller_test2
description = PyInstaller test 2
version = attr: pyinstaller_test2.__version__
author = Bleak Future
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	Click>=7.0.0
	pyinstaller
	netmiko
python_requires = >=3.8

[options.entry_points]
console_scripts = 
	pyinstaller_test2=pyinstaller_test2.cli:main

[options.extras_require]
testing = 
	pytest-cov>=3.0.0
	flake8>=4.0.1
	tox>=3.24
	bump2version>=1.0.1
	watchdog>=2.1.6
	pytest>=6.2.5
	twine>=3.7.1
	black>=21.12b0
	pytest-html
	pytest-json-report
	pytest-metadata
	pytest-runner
	pytest-watch
	radon
	pylint
documentation = 
	Sphinx>=4.3.1

[options.packages.find]
include = 
	pyinstaller_test2
	pyinstaller_test2.*

[bumpversion:file:pyinstaller_test2/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 160

[tool:pytest]
